hero in landing page and fix alignments

--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,8 @@ code {
     transform: translateX(100%);
   }
 }
+
+.cls-1 {
+  fill: #fff;
+  stroke-width: 0px;
+}
